add border to card

--- a/mywebsite/base/templates/base/home.html
+++ b/mywebsite/base/templates/base/home.html
@@ -19,7 +19,7 @@
 
         <div class="row mt-5">
             <div class="col-md-3">
-                <div class="card card-body h-100" id="profile-wrapper">
+                <div class="card card-body h-100 border-info" id="profile-wrapper">
                     <img id="profile-pic" src="{% static 'images/image.jpeg' %}" alt="">
                     <hr>
                     <h4>Hi, I'm Hamed </h4>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="col-md-9">
-                <div class="card card-body h-100">
+                <div class="card card-body h-100 border-info">
                     <h4>My first job as a Developer</h4>
                     <hr>
                     <p> is simply dummy text of the printing and typesetting industry. 
